--- a/TerrainBuilder/MainWindow.xaml
+++ b/TerrainBuilder/MainWindow.xaml
@@ -15,6 +15,7 @@
             <Menu
             DockPanel.Dock="Top">
                 <MenuItem Header="Load new Tile File" Click="MenuItem_Click" />
+                <MenuItem Header="Save" Click="SaveRoom_Click" />
             </Menu>
             <Border
                 DockPanel.Dock="Top">
